--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ Developer @GA in NYC
 }
 
 .work h5 {
-  max-width: 600px;
+  max-width: 720px;
 }
 
 body {
@@ -62,6 +62,7 @@ body {
 }
 a {
   text-decoration: none;
+  color: #981d52;
 }
 
 
@@ -86,7 +87,7 @@ a {
 }
 
 .logo {
-  font-size: 48px;
+  font-size: 40px;
   font-weight: 300;
 }
 
@@ -96,7 +97,7 @@ a {
 
 header {
   background: #ffffff;
-  padding: 25px 0;
+  padding: 10px 0;
   overflow: hidden;
 }
 header .logo {
@@ -106,13 +107,13 @@ header .logo {
 
 header nav {
   float: right;
-  margin-top: 15px;
+  margin-top: 10px;
 }
 
 header nav ul li {
   display: inline-block;
-  margin: 0 0 0 40px;
-  font-size: 16px;
+  margin: 16px 0 0 40px;
+  font-size: 20px;
   font-weight: 300;
 }
 
@@ -147,19 +148,19 @@ header nav ul li a:hover {
   border-radius: 30px;
   font-weight: 600;
   padding: 12px 0;
-  width: 280px;
+  width: 180px;
   font-size: 18px;
   text-align: center;
   display: block;
-  margin: 0 auto;
+  border: none;
 }
 .cta {
   background: #981d52;
   color: #fff;
-  float: right;
 }
 
 .cta:hover {
+  box-shadow: inset 0 0 0 2px #981d52;
   color: #981d52;
   background: #fff;
 }
@@ -291,24 +292,95 @@ footer p {
   width: 70%;
 }
 
+input {
+  font-size: 20px;
+  font-family: 'Open Sans';
+  font-weight: 300;
+  color: #333;
+  padding: 7px 10px 10px 15px;
+  display: block;
+  width: 500px;
+  border: none;
+  border: 1px solid #ccc;
+  height: 60px;
+}
+
+input:hover ~ label{
+  color: black;
+}
+
+input:focus{ 
+  outline: none; /* remove default outline when focused */ 
+  /*bottom: 1px;
+  border-bottom:3px solid #5264AE; */
+  border-color: #5264AE;
+/*  transition:0.2s ease all; 
+  -moz-transition:0.2s ease all; 
+  -webkit-transition:0.2s ease all;*/
+}
+label          {
+  color: #999;
+  padding-left: 2px;
+  padding-right: 2px;
+  font-size: 20px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 14px;
+  top: 13px;
+  transition: 0.2s ease all; 
+  -moz-transition: 0.2s ease all; 
+  -webkit-transition: 0.2s ease all;
+}
+input:focus ~ label {
+  top:-10px;
+  font-size:14px;
+  color:black;
+  background-color: white;
+}
+
+.form-row {
+  position: relative;
+  margin-bottom: 30px;
+}
+
+input.filled ~ label{
+  top:-10px;
+  font-size:14px;
+  color:black;  
+    background-color: white;
+}
+
+#form_elements {
+  margin-top: -40px;
+}
+
 @media only screen and (max-width: 768px) {
   body {
-    font-size: 18px;
+  font-size: 16px;
+  }
+  .container {
+  width: 92%;
   }
   header {
-    padding: 10px;
+  
+  }
+  header nav {
+  margin-top: 19px;
   }
   h3 {
-    font-size: 30px;
+    font-size: 24px;
+  }
+  h5 {
+    font-size: 13px;
   }
   .logo {
     font-size: 28px;
+    margin-top: 3px;
   }
   header nav ul li {
-    margin: 0px 20px 0 0;
-  }
-  header nav ul li {
-    font-size: 18px;
+    margin: 0px 0px 0 20px;
+    font-size: 14px;
   }
   #hero {
     height: 300px;
